# litman

./: .gitignore  LICENSE  README.md  load_full_dblp.py  main.py  pyproject.toml
.github/workflows/: build-frontend.yml
backend/: app.py  config.py
backend/api/: __init__.py  article_api.py  author_api.py  import_api.py  search_api.py  stats_api.py
backend/bptree/: CMakeLists.txt  README.md  pyproject.toml
backend/bptree/src/: bptree.cpp  bptree.h  wrapper.cpp
backend/bptree/src/bptree/: __init__.py  _bptree.pyi
backend/models/: article.py  storage.py
backend/pivoter/: CMakeLists.txt  README.md  pyproject.toml
backend/pivoter/src/: misc.h  neighbor_list.h  pivoter.h  wrapper.cpp
backend/pivoter/src/pivoter/: __init__.py  _pivoter.pyi
backend/services/: import_service.py  search_service.py  stats_service.py
backend/utils/: xml_parser.py
frontend/: README.md  index.html  package.json  tailwind.config.js
frontend/src/: App.vue  main.js  router.js
frontend/src/api/: articleApi.js  authorApi.js  config.js  importApi.js  index.js  request.js  searchApi.js  statsApi.js
frontend/src/assets/: base.css
frontend/src/components/: ArticleDetail.vue  CollaborationsView.vue  LiteratureSearch.vue  ManageLiterature.vue  StatisticsView.vue
frontend/src/utils/: colors.js
