[project]
name = "litman"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bptree",
    "flask>=3.1.0",
    "flask-cors>=5.0.1",
    "networkx>=3.4.2",
]

[tool.uv.workspace]
members = ["backend/bptree"]

[tool.uv.sources]
bptree = { workspace = true }
