[project]
name = "litman"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bptree",
    "pivoter",
    "flask>=3.1.0",
    "flask-cors>=5.0.1",
    "lxml>=5.3.1",
    "nltk>=3.9.1",
    "cachetools>=5.5.2",
    "sseclient>=0.0.27",
    "tabulate>=0.9.0",
]

[tool.uv.workspace]
members = ["backend/bptree", "backend/pivoter"]

[tool.uv.sources]
bptree = { workspace = true }
pivoter = { workspace = true }

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "requests>=2.32.3",
    "tqdm>=4.67.1",
]
