[project]
name = "bptree"
version = "0.0.4"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "ParaN3xus", email = "paran3xus007@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[tool.scikit-build]
minimum-version = "build-system.requires"
build-dir = "build/{wheel_tag}"
cmake.build-type = "Release"

[build-system]
requires = ["scikit-build-core>=0.10", "pybind11"]
build-backend = "scikit_build_core.build"
